fixed aos overflow (added div with overflow)

--- a/client/app/styles/globals.scss
+++ b/client/app/styles/globals.scss
@@ -9,7 +9,7 @@ $accent-color: #7acc88;
 $background-gradient: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(23,23,23,1) 50%, rgba(0,0,0,1) 100%);
 
 * {
-scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,7 +18,4 @@ body {
   margin: 0;
   background-color: #000000;
   font-family: 'Roboto Condensed', sans-serif;
-  overflow-x: hidden;
 }
-
-.aos-init:not(.aos-animate):after {position: fixed;}
